minor edit/housekeeping activity

--- a/src/pages/hello.astro
+++ b/src/pages/hello.astro
@@ -18,6 +18,7 @@ import Layout from "@/layouts/Layout.astro";
           <tr>
             <th scope="col">Tenet</th>
             <th scope="col">Rationale</th>
+            <th scope="col">Alternative</th>
           </tr>
         </thead>
         <tbody>
@@ -29,6 +30,10 @@ import Layout from "@/layouts/Layout.astro";
               barriers, and treats documentation as infrastructure rather than
               folklore.
             </td>
+            <td
+              >Or you could just... Reinvent the wheel every single time you do
+              something</td
+            >
           </tr>
           <tr>
             <th scope="row"> Asking is a choice, not a requirement </th>
@@ -37,6 +42,10 @@ import Layout from "@/layouts/Layout.astro";
               should not have to interrupt, guess, or chase access to do their
               job or understand a system.
             </td>
+            <td
+              >Force people into behaving like you do, because if it feels right
+              for you it must feel right for other people as well</td
+            >
           </tr>
           <tr>
             <th scope="row"> Publish where it can be found </th>
@@ -45,6 +54,10 @@ import Layout from "@/layouts/Layout.astro";
               that is searchable, stable, and accessible to those who need it —
               including future versions of ourselves.
             </td>
+            <td
+              >Keep the info to yourself, make people come to ask for it and you
+              can feel important</td
+            >
           </tr>
         </tbody>
       </table>
