minor edit/housekeeping activity

--- a/src/pages/hello.astro
+++ b/src/pages/hello.astro
@@ -6,9 +6,20 @@ import Layout from "@/layouts/Layout.astro";
   <article id="hello">
     <header>
       <h1>Hello</h1>
-      <p class="subtitle">...</p>
+      <p class="subtitle">
+        I tend to ask many questions. Do not be alarmed by them. They're not
+        meant to challenge you. They're simply how I make sense of things.
+      </p>
+      <p>
+        Not everyone needs to ask questions to understand, and that’s perfectly
+        fine. Just know that for some of us, questions are part of the learning
+        process.
+      </p>
+      <p>
+        The best kinds of collaboration and interaction happen when different
+        kinds of minds work together and fill in each other’s blanks.
+      </p>
     </header>
-
     <section aria-labelledby="tenets">
       <h2 id="tenets">Tenets</h2>
 
